Add postgresql API: uploadInfo
